<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grenoble.miage.projet.AddVoitureActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_above="@+id/linearLayout3"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/modele"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/editText_modele"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textAutoComplete"
            android:text="MODELE" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:id="@+id/linearLayout"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView5"
            android:textStyle="bold"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/marque" />

        <AutoCompleteTextView
            android:id="@+id/editText_marque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textAutoComplete"
            android:text="MARQUE" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3"
        android:layout_above="@+id/button_valider_voiture"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="164dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/plaque"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_plaque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="AA-999-BB" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView_voiture"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_voiture"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_valider_voiture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:onClick="addVoiture"
        android:text="@string/valider"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
